kubedoom-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubedoom-deployment
  namespace: kubedoom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubedoom
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: kubedoom
    spec:
      hostNetwork: true
      containers:
      - name: kubedoom-container
        image: storaxdev/kubedoom:0.5.0
        ports:
        - containerPort: 5900
          protocol: TCP
      serviceAccountName: kubedoom
