kubedoom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubedoom-ingress
  namespace: kubedoom
spec:
  ingressClassName: nginx
  rules:
  - host: "doom.185.86.146.255.nip.io" 
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: kubedoom-service
            port:
              number: 5900
